# ffs-test-task

./: .gitignore  README.md  README_NEW.md  app.py  main.py  pyproject.toml  requirements.txt
common/: __init__.py  config.py  constants.py  game_db.py  messages_db.py  todo_db.py  users_db.py
game/: __init__.py  game_db.py  game_rst.py  game_sio.py
instance/: __init__.py  todolist_db.py  todolist_rst.py  todolist_sio.py
messages/: __init__.py  chat_messages_sio.py
tasks/rps-v1/: rps-v1.md
tests/: base_test.py  conftest.py  reglog_test.py
todo/: __init__.py  config.py  todo_category_rst.py  todo_category_sio.py  todo_rst.py  todo_task_rst.py  todo_task_sio.py
todos/: __init__.py  parsers.py  todos_api.py  todos_db.py  todos_rst.py  todos_sio.py  utils.py
users/: __init__.py  reglog_rst.py
